--- a/style.css
+++ b/style.css
@@ -3,14 +3,46 @@ body {
     margin: 0;
     padding: 0;
     min-height: 100vh;
+    /* overflow: hidden; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #FAEAB1;
+
+}
+
+h1 {
+    margin: 0;
+    padding: 0;
+    font-size: 3em;
+    font-family: 'Concert One', cursive;
 }
 
 .grid-container {
+    width: 650px;
+    height: 650px;
     display: grid;
-   
-    grid-template-rows: repeat(16, 1fr);  */
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+}
+
+.grid-row{
+    display: flex;
 }
 
 .square {
-    height: 6.25vh;
+    border: 1px solid black;
 }
+
+.footer { 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+p, button, h1 {
+    color: #C58940;
+}
+    
